grails-app/assets/stylesheets/commons.css
/**
 * ELURIKKUS ALA STYLES
 */

.btn {
    line-height: 1.5rem;
}

/* .hide class alternative */
.hidden-node {
    display: none !important;
}

.ordered-list {
    list-style-position: inside;
    padding-left: 1em;
    text-indent: -1em;
    line-height: 1.3
}

.ordered-list li {
    padding: 3px 0
}

/* WIP XXX TODO: Remove when not in use any more. */
.input-wrapper {
    display: flex;
}

/* WIP XXX TODO: Remove when not in use any more. */
.input-wrapper__input {
    width: 100%;
}

/* WIP XXX TODO: Remove when not in use any more. */
.input-wrapper__addon {
    border-radius: 0 7px 7px 0
}

.tab-content {
    border-bottom: 1px solid #ddd;
    border-left: 1px solid #ddd;
    border-right: 1px solid #ddd;
    padding: 1.25rem;
    margin-bottom: 1rem;
}

.search-section {
    /* Matching the card padding of Bootstrap 4. */
    margin-bottom: 1.25rem;
}

.search-controls {
    margin-bottom: 1rem;
}

.search-controls label {
    margin-right: .5rem;
}

.search-controls .form-group {
    margin-left: 1rem;
}

.filters-container {
    /* Matching the card padding of Bootstrap 4. */
    margin-bottom: 1.25rem;
}

